successful render two image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,4 +29,6 @@
             android:resource="@array/preloaded_fonts" />
     </application>
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
 </manifest>
