--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
 
     // room
     implementation "androidx.room:room-runtime:$room_version"
