--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         lifecycle_version = "2.2.0"
         arch_version = "2.1.0"
         room_version = "2.2.3"
+        retrofit2_version = '2.6.0'
         paging_version = "2.1.1"
     }
     repositories {
