start next game, add listener for communicate with repository, create GLSurfaceView in code

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         room_version = "2.2.3"
         retrofit2_version = '2.6.0'
         paging_version = "2.1.1"
+        work_version = '2.1.0'
     }
     repositories {
         google()
