--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         retrofit2_version = '2.6.0'
         paging_version = "2.1.1"
         work_version = '2.1.0'
+        dagger_version = '2.17'
     }
     repositories {
         google()
