--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,15 +60,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
-    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
 
     // room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
     implementation "androidx.room:room-ktx:$room_version"
 
     // paging
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
 }
