--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.61'
         viewVersion = "1.0.0"
         nav_version = "2.2.1"
+        nav_safe_args_version = "2.3.0-beta01"
         glide_version = '4.11.0'
         lifecycle_version = "2.2.0"
         arch_version = "2.1.0"
@@ -23,8 +24,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.3'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_safe_args_version"
     }
 }
 
