--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -75,6 +76,12 @@ dependencies {
 
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
+
+    // firebase analytics.
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
+
+    // firebase crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
 
     //ADV
     implementation 'com.google.firebase:firebase-ads:15.0.1'
